hphp/hack/test/typecheck/parse_xhp_format_infinite_loop2.php.exp
File "parse_xhp_format_infinite_loop2.php", line 5, characters 1-0:
Expected end of XHP category/attribute/children declaration (Parsing[1002])
